lesson code added

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "homepage": "https://github.com/iamshaunjp/webpack-playlist#readme",
   "devDependencies": {
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
     "webpack": "^1.13.2"
   },
   "dependencies": {
