--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "devDependencies": {
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
+    "css-loader": "^0.25.0",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.2"
   },
   "dependencies": {
