--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack --config ./webpack.config.js"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/iamshaunjp/webpack-playlist#readme",
   "devDependencies": {
-    "webpack": "^5.30.0"
+    "webpack": "^5.30.0",
+    "webpack-cli": "^4.6.0"
   }
 }
