--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   },
   "homepage": "https://github.com/iamshaunjp/webpack-playlist#readme",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.2.2",
+    "babel-preset-es2020": "^1.0.2",
     "webpack": "^5.30.0",
     "webpack-cli": "^4.6.0"
   }
